chore: Fix container spacing

--- a/src/item/styles.scss
+++ b/src/item/styles.scss
@@ -3,8 +3,7 @@
 .header {
   display: flex;
   justify-items: center;
-  padding: cs.$space-scaled-s cs.$space-container-horizontal;
-  padding-left: calc(#{cs.$space-container-horizontal} - #{cs.$space-scaled-xs});
+  padding: cs.$space-scaled-s calc(#{cs.$space-container-horizontal} - #{cs.$space-scaled-xs});
 }
 
 .flexible {
